# mapgen

./: CMakeLists.txt  README.md
examples/: generate.sh
src/: .export_ppm.h.swp  .generate_terrain.cpp.swp  .generate_water.cpp.swp  .generate_water.h.swp  .helper.cpp.swp  .image.h.swp  .main.cpp.swo  .main.cpp.swp  altitude_generator.h  biome_generator.cpp  biome_generator.h  circle_stack.cpp  circle_stack.h  config.h  export_ppm.h  gaussian_generator.h  generate_map.cpp  generate_map.h  generate_mask.cpp  generate_mask.h  generate_multi_terrain.cpp  generate_multi_terrain.h  generate_placement.cpp  generate_placement.h  generate_rivers.cpp  generate_rivers.h  generate_terrain.cpp  generate_terrain.h  generate_tiles.cpp  generate_tiles.h  generate_water.cpp  generate_water.h  generate_world.cpp  generate_world.h  helper.cpp  helper.h  image.h  main.cpp  main2.cpp  merge_map.cpp  (+12 more)
src/generators/: biome.cpp  biome.h  moisture.cpp  moisture.h  noise.cpp  noise.h  shapes.cpp  shapes.h  temperature.cpp  temperature.h  terrain.cpp  terrain.h  water.cpp  water.h
